# opencv_face_align

./: CMakeLists.txt  LICENSE  main.cxx  opencv_face_align.h  readme.txt
sample/: 9_040.jpg.txt
